[package]
name = "beakid"
version = "0.2.2"
edition = "2024"
rust-version = "1.85.0"
description = "Snowflake-like 64-bit unique ID generator with PostgreSQL BIGINT-friendly i64 IDs."
license = "MIT"
repository = "https://github.com/tokime/crates"
homepage = "https://github.com/tokime/crates/tree/main/beakid"
documentation = "https://docs.rs/beakid"
readme = "README.md"
keywords = ["id", "snowflake", "unique", "bigint", "postgres"]
categories = ["data-structures", "database"]

[dependencies]
tokistamp = "0.1.1"

[features]
default = []
